--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-minimal
 title: Pierre Baduel
+twitter_username: pierrebaduel
+linkedin_username: pierre-baduel-2b5280105
 logo: 
