--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 theme: jekyll-theme-minimal
 title: Pierre Baduel
+google_analytics: UA-59172984-3
 twitter_username: pierrebaduel
 linkedin_username: pierre-baduel-2b5280105
 logo: 
