--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,8 @@ title: Pierre Baduel
 google_analytics: UA-59172984-3
 twitter_username: pierrebaduel
 linkedin_username: pierre-baduel-2b5280105
+timezone: Europe/Paris
+future: true
 logo: 
 plugins:
   - jekyll-gist
