--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,9 @@ timezone: Europe/Paris
 future: true
 logo: 
 plugins: 
+  - jekyll-paginate
+  - jekyll-sitemap
   - jekyll-gist
+  - jekyll-feed
+  - jemoji
+  - jekyll-include-cache
