--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ twitter_username: pierrebaduel
 linkedin_username: pierre-baduel-2b5280105
 timezone: Europe/Paris
 future: true
-logo: 
+logo: /images/Logo-publi.png
 plugins: 
   - jekyll-paginate
   - jekyll-sitemap
