--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ twitter_username: pierrebaduel
 linkedin_username: pierre-baduel-2b5280105
 timezone: Europe/Paris
 future: true
-logo: #/images/Logo-publi.png
+logo: /images/PEpiTE_square.png
 plugins: 
   - jekyll-paginate
   - jekyll-sitemap
