--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
-title: PEpiTE
+title: PEpiTE team
 description: Polyploidy, Epigenetics, Transposable Elements
 google_analytics: UA-59172984-3
 twitter_username: pierrebaduel
