--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 title: Team PEpiTE
-description: Polyploidy, Epigenetics, Transposable Elements @IBENS
+description: Polyploidy, Epigenetics, Transposable Elements @<a href="https://www.ibens.ens.fr/?lang=en">IBENS</a>
 google_analytics: UA-59172984-3
 twitter_username: pierrebaduel
 linkedin_username: pierre-baduel-2b5280105
