--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
-title: Team PEpiTE
+title: Pierre Baduel
 description: Polyploidy, Epigenetics & Transposable Elements @<a href="https://www.ibens.ens.fr/?lang=en">IBENS</a>
 google_analytics: UA-59172984-3
 twitter_username: pierrebaduel
