--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-minimal
 title: Pierre Baduel
 description: Polyploidy, Epigenetics & Transposable Elements @<a href="https://www.ibens.ens.fr/?lang=en">IBENS</a>
-google_analytics: UA-59172984-3
+google_analytics: G-TS2FHR25CT <!-- UA-59172984-3 -->
 twitter_username: pierrebaduel
 linkedin_username: pierre-baduel-2b5280105
 timezone: Europe/Paris
